--- a/_includes/about.html
+++ b/_includes/about.html
@@ -54,7 +54,7 @@
         </div>
         {% endif %}
     </div>
-
+        {% include sidebar-search.html %}
         {% include sidebar-popular-repo-side.html %}
 <!--     <div class="col-md-4">
         {% include sidebar-popular-repo.html %}
