--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -23,6 +23,7 @@
 
     </div>
 
+     {% include sidebar-search.html %}
     <div class="col-md-4">
         {% include sidebar-post-tag.html %}
     </div>
