--- a/_includes/sidebar-post-tag.html
+++ b/_includes/sidebar-post-tag.html
@@ -1,5 +1,5 @@
 <h3 class="sidebar-title">Blog Categories</h3>
-<div id="blog-categories">
+<!-- <div id="blog-categories">
     <ul class="list-group">
         {% for category in site.categories %}
         <li class="list-group-item">
@@ -16,4 +16,22 @@
         $("#blog-categories li").css('text-transform','capitalize')
     });
 
+</script> -->
+
+<div id="blog-categories">
+  <ul class="list-group">
+    {% assign sorted_categories = site.categories | sort %}
+    {% for category in sorted_categories %}
+    <li class="list-group-item">
+    <a href="#{{ category[0] }}">{{ category | first }}</a>
+    <span class="badge">{{ category[1].size }}</span>
+    </li>
+    {% endfor %}
+  </ul>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(function(){
+    $("#blog-categories li").css('text-transform','capitalize')
+  });
 </script>
