--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -3,7 +3,7 @@
     <div class="col-md-8">
 
         <!-- Blog list -->
-        <ul id="posts-list">
+  <!--       <ul id="posts-list">
             {% for post in site.posts %}
             <li class="posts-list-item">
                 <div class="posts-content">
@@ -13,7 +13,22 @@
                 </div>
             </li>
             {% endfor %}
-        </ul>
+        </ul> -->
+
+    <section class="container posts-content">
+        {% assign sorted_categories = site.categories | sort %}
+        {% for category in sorted_categories %}
+            <h3>{{ category | first }}</h3>
+                <ol class="posts-list" id="{{ category[0] }}">
+                {% for post in category.last %}
+                    <li class="posts-list-item">
+                    <span class="posts-list-meta">{{ post.date | date:"%Y-%m-%d" }}</span>
+                    <a class="posts-list-name" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                    </li>
+            {% endfor %}
+            </ol>
+        {% endfor %}
+    </section>
 
         <!-- Pagination -->
         {% include pagination.html %}
