--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -19,7 +19,7 @@
         {% assign sorted_categories = site.categories | sort %}
         {% for category in sorted_categories %}
             <h3>{{ category | first }}</h3>
-                <ul class="posts-list" id="{{ category[0] }}">
+                <ol class="posts-list" id="{{ category[0] }}">
                 {% for post in category.last %}
                 <div class="posts-content">
                     <span class="posts-list-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
@@ -27,7 +27,7 @@
                     <span class='circle'></span>
                 </div>
                 {% endfor %}
-            </ul>
+            </ol>
         {% endfor %}
     </section>
 
