--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -21,11 +21,13 @@
             <h3>{{ category | first }}</h3>
             <ol class="posts-list" id="{{ category[0] }}">
                 {% for post in category.last %}
-                <div class="posts-content">
-                    <span class="posts-list-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
-                    <a class="posts-list-name bubble-float-left" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-                    <span class='circle'></span>
-                </div>
+                <li class="posts-list-item">
+                    <div class="posts-content">
+                        <span class="posts-list-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
+                        <a class="posts-list-name bubble-float-left" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                        <span class='circle'></span>
+                    </div>
+                </li>
                 {% endfor %}
             </ol>
         {% endfor %}
