--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -19,7 +19,7 @@
         {% assign sorted_categories = site.categories | sort %}
         {% for category in sorted_categories %}
             <h3>{{ category | first }}</h3>
-            <ol class="posts-list" id="{{ category[0] }}">
+            <ul class="posts-list" id="{{ category[0] }}">
                 {% for post in category.last %}
                 <li class="posts-list-item">
                     <div class="posts-content">
@@ -29,7 +29,7 @@
                     </div>
                 </li>
                 {% endfor %}
-            </ol>
+            </ul>
         {% endfor %}
     </section>
 
