--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -15,7 +15,7 @@
         </ul> -->
 
     <section class="container posts-content">
-        {% assign sorted_categories = site.posts | sort %}
+        {% assign sorted_categories = site.categories | sort %}
         {% for category in sorted_categories %}
             <h3>{{ category | first }}</h3>
             <!-- <ol class="posts-list" id="{{ category[0] }}"> -->
