--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -3,14 +3,19 @@
 
         <!-- Blog list -->
         <ul id="posts-list">
-            {% for post in site.posts %}
-            <li class="posts-list-item">
-                <div class="posts-content">
-                    <span class="posts-list-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
-                    <a class="posts-list-name bubble-float-left" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
-                    <span class='circle'></span>
-                </div>
-            </li>
+            {% assign sorted_categories = site.categories | sort %}
+            {% for category in sorted_categories %}
+            <h3>{{ category | first }}</h3>
+
+                {% for post in category.last %}
+                <li class="posts-list-item">
+                    <div class="posts-content">
+                        <span class="posts-list-meta">{{ post.date | date: "%Y-%m-%d" }}</span>
+                        <a class="posts-list-name bubble-float-left" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                        <span class='circle'></span>
+                    </div>
+                </li>
+                {% endfor %}
             {% endfor %}
         </ul>
 
