--- a/_includes/blog-page.html
+++ b/_includes/blog-page.html
@@ -1,5 +1,5 @@
-
-    
+<div class="row">
+    <div class="col-md-8">
 
         <!-- Blog list -->
 <!--         <ul id="posts-list">
@@ -22,7 +22,24 @@
             {% endfor %}
         </ul> -->
 
-
+    <section class="container posts-content">
+        {% assign sorted_categories = site.categories | sort %}
+        {% for category in sorted_categories %}
+            <h3>{{ category | first }}</h3>
+            <!-- <ol class="posts-list" id="{{ category[0] }}"> -->
+            <ol class="posts-list" >
+                {% for post in category.last %}
+                    <li class="posts-list-item">
+                        <div class="posts-content">
+                            <!-- <span class="posts-list-meta">{{ post.date | date:"%Y-%m-%d" }}</span> -->
+                            <a class="posts-list-name bubble-float-left" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
+                            <span class='circle'></span>
+                        </div>
+                    </li>
+                {% endfor %}
+            </ol>
+        {% endfor %}
+    </section>
 
         <!-- Pagination -->
         {% include pagination.html %}
@@ -30,7 +47,7 @@
         <!-- Comments -->
         {% include disqus-comments.html %}
 
-    
+    </div>
 
      {% include sidebar-search.html %}
     <div class="col-md-4">
