--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,9 @@
 
         <h2>About Me</h2>
 
-        <h3>I love coding, programming and controlling hardware and software, now majoring in solid mechanics</h3>
+        <h3>deleted</h3>
+
+        <!-- <h3>I love coding, programming and controlling hardware and software, now majoring in solid mechanics</h3> -->
 
         <h2>Contact</h2>
 
